tests/errors/assign_missing_rhs.stderr
error: expected expression, found `=`
 --> tests/errors/assign_missing_rhs.rs:4:12
  |
4 |     lisp!((= x));
  |            ^ expected expression
